--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "generator-restful",
+  "name": "generator-express-rest",
   "version": "0.0.1",
-  "description": "Yeoman generator for NodeJS-Express RESTful webservices",
+  "description": "Yeoman generator for Node.js-Express REST webservices",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
